# solid-imager

./: .coderabbit.yaml  .commit_message.txt  .dockerignore  .env.example  .gitignore  AGENTS.md  CHARACTER_MANAGEMENT_SPEC.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  app.config.ts  biome.json  compose.production.override.yml.example  compose.production.yml  compose.yml  drizzle.config.ts  getMediaIds.ts  hoge.json  mise.toml  nginx.conf.example  node_modules  notTsDoc.md  package-lock.json  package.json  patch.cjs  patch.js  patch_author_repo.js  patch_detail.cjs  patch_nav.cjs  patch_repo.sh  patch_root.cjs  patch_sidebar.cjs  patch_viewer.cjs  pyproject.toml  require.md  tailwind.config.js  tsc_output.txt  tsconfig.base.json  tsconfig.doc.json  (+8 more)
.gemini/: settings.json  styleguide.md
.husky/: pre-commit
.jules/: bolt.md
.opencode/: package-lock.json
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri/src-tauri/capabilities/: main.json
apps/tauri/src-tauri/src/: backend.rs  lib.rs  main.rs  media_config.rs  media_metadata.rs  watcher.rs
apps/tauri/src-tauri/src/backend/: ai.rs  authors.rs  characters.rs  config.rs  db.rs  helpers.rs  ips.rs  media.rs  media_processing.rs  metadata.rs  mod.rs  presets.rs  projects.rs  sources.rs  tags.rs  types.rs  utils.rs
apps/tauri/src-tauri/src/commands/: backup.rs  fs.rs  media.rs  mod.rs  utils.rs
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: cli-usage.md  duplicate-features-report.md  report.md  source-code-breakdown.md  specification.md  test-status.md
drizzle/: 0000_abandoned_thundra.sql  0000_initial-schema.sql  0000_wise_natasha_romanoff.sql  0000_yielding_lifeguard.sql  0001_blue_mesmero.sql  0001_parallel_nova.sql  0001_parched_monster_badoon.sql  0001_rename_media_source_id.sql  0001_spotty_red_ghost.sql  0001_useful_zaladane.sql  0002_great_black_bolt.sql  0002_last_mister_fear.sql  0002_lumpy_vin_gonzales.sql  0002_unique_wendell_rand.sql  0003_rename_media_source_id_index.sql  0003_romantic_dreadnoughts.sql  0003_watery_tenebrous.sql  0004_chemical_klaw.sql  0004_rename_media_source_id_constraint.sql  0005_clever_avengers.sql  0005_eager_spencer_smythe.sql  0005_rename_jobs_source_id.sql  0006_messy_madame_web.sql  0006_narrow_magus.sql  0008_old_nightcrawler.sql  0010_amused_krista_starr.sql
patches/: vite-plugin-solid@2.11.10.patch
public/: api-docs.html  openapi.json
python-src/: main.py
requirements/: README.md  require.md
scripts/: add-logging.ts  delete-pending-jobs.ts  dump-db.ts  fix-vite-plugin-solid.js  generate-swagger-spec.ts  migrate-pglite.ts  (+4 more)
(+2383 files in other folders)
