[package]
name = "solid-imager-tauri"
version = "0.1.0"
description = "solid-imager desktop shell"
authors = ["hmjn"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
