[package]
name = "solid-imager-tauri"
version = "0.1.0"
description = "solid-imager desktop shell"
authors = ["hmjn"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
mime_guess = "2"
rayon = "1"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
